--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/unsplash-demo
 spring.datasource.username=postgres
 spring.datasource.password=sardorbek1
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=never
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
 #spring.jpa.show-sql=true
 spring.data.rest.base-path=/api
 server.error.include-binding-errors=never
